--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,4 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/node,windows,emacs,macos,linux,visualstudiocode
 
+.env
