--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "mongoose": "^5.13.7",
+    "sequelize": "^6.6.5",
     "yargs": "^17.1.0"
   }
 }
-
