--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/node,windows,emacs,macos,linux,visualstudiocode
 
 .env
+examples.txt
