--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "mongoose": "^5.13.7",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5",
